Missing resource lock acquisition when applying batch of inserts to a capped collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0, 8.1.3, 8.0.13, 7.0.26
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • v8.1, v8.0, v7.0
    • Storage Execution 2025-06-23
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-82180 added an assertion that any writer to a non-clustered capped collection that has oplog slots reserved must have already acquired the resource lock. Currently, this lock is not acquired here when applying a batch of inserts to a capped collection on a secondary. This missing lock acquisition shouldn't pose any insertion order issues, since any writes to a capped collection would be batched within the same batch and be serialized, but we should add the lock acquisition here in order to satisfy the assertion and then revisit it in SERVER-106004

            Assignee:
            Damian Wasilewicz
            Reporter:
            Damian Wasilewicz
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: