SERVER-106354: Add resource lock acquisition when applying batch of inserts to a capped collection on a secondary (#37366)

GitOrigin-RevId: b9abe699e7fee30cc5766cf7c375d772bf7d6130